--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,43 @@
   </dependencies>
   <build>
     <finalName>${project.artifactId}</finalName>
+      <plugins>
+          <plugin>
+              <groupId>io.fabric8</groupId>
+              <artifactId>docker-maven-plugin</artifactId>
+              <version>0.30.0</version>
+              <executions>
+                  <execution>
+                      <id>start</id>
+                      <phase>pre-integration-test</phase>
+                      <goals>
+                          <goal>build</goal>
+                          <goal>start</goal>
+                      </goals>
+                  </execution>
+                  <execution>
+                      <id>stop</id>
+                      <phase>post-integration-test</phase>
+                      <goals>
+                          <goal>stop</goal>
+                      </goals>
+                  </execution>
+              </executions>
+
+
+              <configuration>
+                  <images>
+                      <image>
+                          <name>iad.ocir.io/tuxtor/microprofile/democrud</name>
+                          <build>
+                              <dockerFile>${project.basedir}/Dockerfile</dockerFile >
+                          </build>
+                      </image>
+
+                  </images>
+              </configuration>
+          </plugin>
+      </plugins>
   </build>
   <profiles>
     <profile>
